--- a/index.html
+++ b/index.html
@@ -421,13 +421,13 @@
         
         <div class="image-section">
             <div class="image-slide active gradient-bg" id="image-0">
-                <img src="6bcaa16d618ed918f5c4a5f9c489ccf0.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว">
+                <img src="./6bcaa16d618ed918f5c4a5f9c489ccf0.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว">
             </div>
             <div class="image-slide blue-bg" id="image-1">
-                <img src="747923b1e5596f5cfc14190dca83b9f2.jpg" alt="พระบรมรูป รัชกาลที่ 5">
+                <img src="./747923b1e5596f5cfc14190dca83b9f2.jpg" alt="พระบรมรูป รัชกาลที่ 5">
             </div>
             <div class="image-slide purple-bg" id="image-2">
-                <img src="550930321_1853479512268475_6798813215841120808_n.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว ในพระราชพิธี">
+                <img src="./550930321_1853479512268475_6798813215841120808_n.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว ในพระราชพิธี">
             </div>
         </div>
 
@@ -606,4 +606,5 @@
         });
     </script>
 </body>
+
 </html>
