--- a/index.html
+++ b/index.html
@@ -692,25 +692,25 @@
         <!-- Image Section -->
         <div class="image-section">
             <div class="image-slide active bg-1" id="image-1">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Chulalongkorn_LoC.jpg/400px-Chulalongkorn_LoC.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว">
+                <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Chulalongkorn_LoC.jpg/400px-Chulalongkorn_LoC.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว">
             </div>
             <div class="image-slide bg-2" id="image-2">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/King_Chulalongkorn_portrait_photograph.jpg/400px-King_Chulalongkorn_portrait_photograph.jpg" alt="พระบรมรูป รัชกาลที่ 5">
+                <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/King_Chulalongkorn_portrait_photograph.jpg/400px-King_Chulalongkorn_portrait_photograph.jpg" alt="พระบรมรูป รัชกาลที่ 5">
             </div>
             <div class="image-slide bg-3" id="image-3">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Chulalongkorn_in_uniform.jpg/400px-Chulalongkorn_in_uniform.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว ในพระราชพิธี">
+                <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Chulalongkorn_in_uniform.jpg/400px-Chulalongkorn_in_uniform.jpg" alt="พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว ในพระราชพิธี">
             </div>
             <div class="image-slide bg-4" id="image-4">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/King_Chulalongkorn_Coronation.jpg/400px-King_Chulalongkorn_Coronation.jpg" alt="พระราชพิธีบรมราชาภิเษก">
+                <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/5/50/King_Chulalongkorn_Coronation.jpg/400px-King_Chulalongkorn_Coronation.jpg" alt="พระราชพิธีบรมราชาภิเษก">
             </div>
             <div class="image-slide bg-5" id="image-5">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Chulalongkorn_and_family.jpg/400px-Chulalongkorn_and_family.jpg" alt="พระราชวงศ์">
+                <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Chulalongkorn_and_family.jpg/400px-Chulalongkorn_and_family.jpg" alt="พระราชวงศ์">
             </div>
             <div class="image-slide bg-6" id="image-6">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Chulalongkorn_European_tour.jpg/400px-Chulalongkron_European_tour.jpg" alt="การเสด็จประพาสยุโรป">
+                <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Chulalongkorn_European_tour.jpg/400px-Chulalongkron_European_tour.jpg" alt="การเสด็จประพาสยุโรป">
             </div>
             <div class="image-slide bg-7" id="image-7">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/King_Chulalongkorn_statue.jpg/400px-King_Chulalongkorn_statue.jpg" alt="อนุสาวรีย์พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว">
+                <img src="./https://upload.wikimedia.org/wikipedia/commons/thumb/7/7c/King_Chulalongkorn_statue.jpg/400px-King_Chulalongkorn_statue.jpg" alt="อนุสาวรีย์พระบาทสมเด็จพระจุลจอมเกล้าเจ้าอยู่หัว">
             </div>
         </div>
 
@@ -933,4 +933,5 @@
         });
     </script>
 </body>
+
 </html>
